--- a/client/src/templates/Home.htm
+++ b/client/src/templates/Home.htm
@@ -1,3 +1,6 @@
 <div class="home">
-    <div ui-view="logGenerator"></div>
+    <div ui-view="bargraphTest"></div>
+<!--    <div ui-view="logGenerator"></div>-->
+<!--    <div ui-view="piechartTest"></div>-->
+<!--    <div ui-view="linegraphTest"></div>-->
 </div>
